fix z-index

--- a/src/components/Autocomplete/Autocomplete.module.scss
+++ b/src/components/Autocomplete/Autocomplete.module.scss
@@ -18,6 +18,7 @@
     position: absolute;
     top: calc(100% + fn.to-rem(var(--spacing-xs)));
     width: 100%;
+    z-index: 999;
 
     &--visible {
       display: block;
